# zak

./: .cursorrules  .editorconfig  .env.bak  .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  run.py
.cursor/rules/: commit-messages.mdc
.github/workflows/: lint.yml
alembic/: env.py
alembic/ddl/: cache.py  initial.py  public_bars.py
alembic/versions/: 001_initial_schemas.py  002_user_scope.py  003_drop_bars_schema.py  004_cache_tables.py  005_dbbardata_perf.py  006_dbbardata_perf_indexes.py
bench/: README.md  fixtures.py  report_baseline.py  run_hotpaths.py  thresholds.py
bench/reports/: README.md
docs/: 2026-06-16-team-agent-design.md  2026-06-16-team-agent-plan.md  README.md  ai-data-routing.md  ai-kline-data.md  architecture.md  backtest-ux.md  coding-standards.md  config-hot-reload-design.md  config-hot-reload.md  data-design.md  data-flow.md  deployment-profiles.md  emotion-cycle.md  feature-index.md  implementation-roadmap.md  info-feed.md  intraday-screening-design.md  intraday-screening.md  intraday-workflow.md  market-page.md  multi-user-pg.md  mypy-rollout.md  mypy.md  notifications.md  performance-optimization.md  product-plan.md  radar-leader-screening.md  radar-page.md  risk-gate.md  roadmap.md  screener-hub-guide.md  stock-notes-design.md  stock-notes.md  strategy-profiles.md  team-agent.md  trading-plan-journal.md  trading-system.md  watchlist-groups.md  watchlist-multiview.md  (+5 more)
mcp/: README.md  mcp.json.example
scripts/: batch_download.py  check-ui-layers.sh  check_database.py  diagnose_stock.py  download_data.py  export_metadata.py  fix_pydantic_positional.py  hoist_plc0415.py  import_metadata.py  init_config.py  install.sh  list_bars.py  list_mcp_tools.py  migrate_dataclass_safe.py  migrate_dataclass_to_pydantic.py  mypy-check.sh  quote_collector.py  repair_pydantic_migration.py  revert_hoisted_imports.py  run_screener.py  start_postgresql.sh  start_questdb.sh  sync_skills.py  sync_universe.py
skills/: README.md  example_skill.py  financial_analysis_skill.py  registry.py  risk_analysis_skill.py  tdx_diagnose_skill.py  vnpy_analysis_skill.py  vnpy_backtest_skill.py  vnpy_context_skill.py  vnpy_data_skill.py  vnpy_feed_skill.py  vnpy_notes_skill.py  vnpy_radar_skill.py  vnpy_screening_skill.py  vnpy_sentiment_skill.py  vnpy_trading_skill.py  vnpy_watchlist_skill.py
skills/bilibili-feed/: SKILL.md
skills/tdx-financial-analysis/: SKILL.md
skills/tdx-risk-analysis/: SKILL.md
skills/tdx-stock-diagnose/: SKILL.md
skills/tdx-stock-picker/: SKILL.md
skills/tickflow/: SKILL.md
strategies/: ashare_template.py  double_ma_strategy.py  intraday_breakout_minute_strategy.py  intraday_breakout_strategy.py  limit_board_minute_strategy.py  limit_board_strategy.py  overnight_exit_minute_strategy.py  pullback_minute_strategy.py  pullback_strategy.py  registry.py  short_breakout_strategy.py  signals.py  swing_ma_strategy.py  trend_ma_strategy.py  ultra_short_signals.py
tests/: _bootstrap.py  conftest.py  test_ai_context.py  test_app_db.py  test_ashare_config.py  test_auto_screen.py  test_backtest_events.py  test_bar_store.py  test_chart_panel.py  test_llm_config.py  test_local_data.py  test_models.py  test_quotes.py  test_quotes_chart.py  test_quotes_page_chart.py  test_strategy_registry.py  test_tickflow_klines.py  test_tickflow_stream.py  test_trade_calendar_store.py  test_vnpy_radar_skill.py  test_vnpy_screening_skill.py
tests/agent_skills/: test_frontmatter.py  test_skills.py  test_vnpy_context_skill.py
tests/ashare/: pg_unittest.py  test_ai_actions.py  test_ai_context.py  test_analysis_service.py  test_app_db.py  test_auto_screen_job.py  test_backtest_service.py  test_backtest_strategy_filter.py  test_backtester_engine.py  test_bar_health.py  test_bar_overview_page.py  test_bar_store.py  test_board_filter.py  test_composite_signal.py  test_config.py  test_config_apply.py  test_download_concurrency.py  test_draft_store.py  test_emotion_cycle.py  test_env_store.py  test_fina_mainbz.py  test_financial_service.py  test_fonts.py  test_historical_mcp.py  test_index_amount.py  test_indicators_concept.py  test_industry_map_merge.py  test_industry_sector.py  test_intraday_chart.py  test_leader_score.py  test_limit_ladder_summary.py  test_local_data.py  test_local_fill.py  test_local_pagination.py  test_market_breadth.py  test_market_catalog_load.py  test_market_colors.py  test_market_context.py  test_market_display.py  test_market_environment.py  (+93 more)
tests/bench/: test_hotpath_bench.py  test_thresholds.py
tests/common/: test_dialog_shell.py  test_io_pool.py  test_macos_gui.py  test_monospace_font.py  test_perf_profile.py  test_perf_trace.py  test_startup_profile.py  test_startup_theme.py
tests/llm/: test_chart_collector.py  test_chart_notes.py  test_client_tools.py  test_config.py  test_fear_greed_routing.py  test_graph_hitl.py  test_graph_runner.py  test_graph_supervisor.py  test_market_router.py  test_md_renderer_fonts.py  test_nl_screening_confirm.py  test_pending_bubble.py  test_quick_action_compact.py  test_routing.py  test_session_surface.py  test_store.py  test_stream_control.py  test_team_mode_prefs.py  test_team_orchestrator_fast.py  test_team_orchestrator_stream.py  (+8 more)
vnpy_ashare/: README.md  __init__.py  ai_actions.py  app_db.py  backtest_strategy_filter.py  backtester_app.py  bar_access.py  bar_health.py  bar_store.py  bars.py  branding.py  config.py  config_bridge.py  config_schema.py  engine.py  engine_access.py  events.py  launcher.py  market_hours.py  paths.py  quote_time.py  tickflow_klines.py  trade_calendar_store.py  universe.py  vt_settings.py
vnpy_llm/: __init__.py  client.py  config.py  engine.py  events.py  intent.py  prompts.py  routing.py  session_surface.py  store.py  tool_audit.py  tool_labels.py  tool_result.py  tools_status.py  trace.py  trace_persistence.py
vnpy_mcp/: __init__.py  base.py  client.py  engine.py  registry.py
vnpy_skills/: __init__.py  agent_skill.py  base.py  builtin_tools.py  engine.py
vnpy_tickflow/: tickflow_datafeed.py
(+472 files in other folders)
