[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["packages/*"]

[project]
name = "zak"
version = "0.1.0"
description = "zak — 基于 VeighNa 的 A 股量化终端，集成 TickFlow 与 Tushare 数据源"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vnpy-ashare[full]",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]
postgresql = [
    "vnpy-ashare[postgresql]",
]

[tool.uv.sources]
vnpy-common = { workspace = true }
vnpy-tickflow = { workspace = true }
vnpy-mcp = { workspace = true }
vnpy-skills = { workspace = true }
vnpy-llm = { workspace = true }
vnpy-ashare = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402"]
"tests/_bootstrap.py" = ["E402"]
"tests/**" = ["F841"]
"packages/vnpy-ashare/vnpy_ashare/ui/components/quotes_config.py" = ["E402"]
"packages/vnpy-mcp/vnpy_mcp/base.py" = ["B027"]
"packages/vnpy-skills/vnpy_skills/base.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = [
    "vnpy_common",
    "vnpy_ashare",
    "vnpy_llm",
    "vnpy_skills",
    "vnpy_mcp",
    "vnpy_tickflow",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = false
