[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["packages/*"]

[project]
name = "zak"
version = "0.1.0"
description = "zak — 基于 VeighNa 的 A 股量化终端，集成 TickFlow 与 Tushare 数据源"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vnpy-ashare[full]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=2.1.0",
    "types-redis>=4.6.0.20241004",
]

[tool.uv.sources]
vnpy-common = { workspace = true }
vnpy-tickflow = { workspace = true }
vnpy-mcp = { workspace = true }
vnpy-skills = { workspace = true }
vnpy-llm = { workspace = true }
vnpy-ashare = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["E402"]
"tests/_bootstrap.py" = ["E402"]
"tests/**" = ["F841"]
"packages/vnpy-ashare/vnpy_ashare/cli.py" = ["E402"]
"packages/vnpy-ashare/vnpy_ashare/ui/quotes/quotes_config.py" = ["E402"]
"packages/vnpy-mcp/vnpy_mcp/domain/provider.py" = ["B027"]
"packages/vnpy-skills/vnpy_skills/domain/template.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = [
    "vnpy_common",
    "vnpy_ashare",
    "vnpy_llm",
    "vnpy_skills",
    "vnpy_mcp",
    "vnpy_tickflow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# mypy 渐进启用：仅检查 files 列表内模块；扩大范围见 docs/mypy-rollout.md
[tool.mypy]
python_version = "3.10"
files = [
    "packages/vnpy-ashare/vnpy_ashare/quotes/core",
    "packages/vnpy-ashare/vnpy_ashare/quotes/rank",
    "packages/vnpy-ashare/vnpy_ashare/quotes/market",
    "packages/vnpy-ashare/vnpy_ashare/quotes/misc",
    "packages/vnpy-ashare/vnpy_ashare/quotes/radar",
]
mypy_path = "packages/vnpy-common:packages/vnpy-ashare"
follow_imports = "silent"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
show_error_codes = true

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = false
