[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["packages/*"]

[project]
name = "zak"
version = "0.1.0"
description = "zak — 基于 VeighNa 的 A 股量化终端，集成 TickFlow 与 Tushare 数据源"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vnpy-ashare[full]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=2.1.0",
    "types-redis>=4.6.0.20241004",
    "types-pyside6>=6.10.1.1",
]

[tool.uv.sources]
vnpy-common = { workspace = true }
vnpy-tickflow = { workspace = true }
vnpy-mcp = { workspace = true }
vnpy-skills = { workspace = true }
vnpy-llm = { workspace = true }
vnpy-ashare = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "PLC0415",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["E402"]
"tests/_bootstrap.py" = ["E402"]
"tests/**" = ["F841", "PLC0415"]
"skills/**" = ["PLC0415"]
"strategies/**" = ["PLC0415"]
"packages/vnpy-llm/**" = ["PLC0415"]
"packages/vnpy-mcp/**" = ["PLC0415"]
"packages/vnpy-tickflow/**" = ["PLC0415"]
"packages/vnpy-common/**" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/cli.py" = ["E402"]
"packages/vnpy-ashare/vnpy_ashare/screener/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/screener/dimensions/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/screener/recipe/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/quotes/radar/radar_horizon_scan.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/quotes/radar/radar_signals.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/scheduler/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/features/notes_center/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/features/notes_center/report_launcher.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/features/stock_analysis/__init__.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/features/stock_analysis/open.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/quotes/page/run_log.py" = ["PLC0415"]
"packages/vnpy-ashare/vnpy_ashare/ui/quotes/quotes_config.py" = ["E402"]
"packages/vnpy-mcp/vnpy_mcp/domain/provider.py" = ["B027"]
"packages/vnpy-skills/vnpy_skills/domain/template.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = [
    "vnpy_common",
    "vnpy_ashare",
    "vnpy_llm",
    "vnpy_skills",
    "vnpy_mcp",
    "vnpy_tickflow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
package = false
